Update practical example test functions to replace the existing hardcoded CSS strings with the relevant factories from the other utilities modules.

--- a/nbs/cli/explorer.ipynb
+++ b/nbs/cli/explorer.ipynb
@@ -499,17 +499,18 @@
     "            print(f\"  {info['valid_inputs']}\")\n",
     "        \n",
     "        # Display options\n",
-    "        print(f\"\\nOptions:\")\n",
-    "        if isinstance(info['options'], dict):\n",
-    "            for key, value in info['options'].items():\n",
-    "                if isinstance(value, dict):\n",
-    "                    print(f\"  {key}:\")\n",
-    "                    for sub_key, sub_value in value.items():\n",
-    "                        print(f\"    - {sub_key}: {sub_value}\")\n",
-    "                else:\n",
-    "                    print(f\"  - {key}: {value}\")\n",
-    "        else:\n",
-    "            print(f\"  {info['options']}\")\n",
+    "        if 'options' in info:\n",
+    "            print(f\"\\nOptions:\")\n",
+    "            if isinstance(info['options'], dict):\n",
+    "                for key, value in info['options'].items():\n",
+    "                    if isinstance(value, dict):\n",
+    "                        print(f\"  {key}:\")\n",
+    "                        for sub_key, sub_value in value.items():\n",
+    "                            print(f\"    - {sub_key}: {sub_value}\")\n",
+    "                    else:\n",
+    "                        print(f\"  - {key}: {value}\")\n",
+    "            else:\n",
+    "                print(f\"  {info['options']}\")\n",
     "            \n",
     "    except AttributeError:\n",
     "        print(\"\\nDetailed information not available for this factory.\")\n",
