--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -773,6 +773,8 @@
     "def test_backgrounds_gradient_composition_examples():\n",
     "    \"\"\"Test composing gradient backgrounds with color stops.\"\"\"\n",
     "    from fasthtml.common import Div\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
     "    \n",
     "    # Simple two-color gradient\n",
     "    gradient1 = Div(\n",
@@ -781,7 +783,8 @@
     "            bg_linear.to_r,\n",
     "            from_color.blue._500,\n",
     "            to_color.purple._600,\n",
-    "            \"p-8 text-white\"\n",
+    "            p(8),\n",
+    "            text.white\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-linear-to-r\" in gradient1.attrs['class']\n",
@@ -796,7 +799,8 @@
     "            from_color.red._400,\n",
     "            via_color.yellow._500,\n",
     "            to_color.green._600,\n",
-    "            \"p-8 text-white\"\n",
+    "            p(8),\n",
+    "            text.white\n",
     "        )\n",
     "    )\n",
     "    assert \"via-yellow-500\" in gradient2.attrs['class']\n",
@@ -808,7 +812,7 @@
     "            bg_linear._45,\n",
     "            from_color.indigo._500,\n",
     "            to_color.pink._500,\n",
-    "            \"p-8\"\n",
+    "            p(8)\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-linear-45\" in gradient3.attrs['class']\n",
@@ -820,7 +824,7 @@
     "            bg_radial(),\n",
     "            from_color.indigo._300,\n",
     "            to_color.pink._500,\n",
-    "            \"p-16\"\n",
+    "            p(16)\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-radial\" in radial.attrs['class']\n",
@@ -833,7 +837,7 @@
     "            from_color.red._500,\n",
     "            via_color.yellow._500,\n",
     "            to_color.blue._500,\n",
-    "            \"p-16\"\n",
+    "            p(16)\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-conic-180\" in conic.attrs['class']\n",
@@ -845,7 +849,7 @@
     "            bg_linear.to_t,\n",
     "            from_color.black.opacity(90),\n",
     "            to_color.transparent,\n",
-    "            \"p-8\"\n",
+    "            p(8)\n",
     "        )\n",
     "    )\n",
     "    assert \"from-black/90\" in gradient_opacity.attrs['class']\n",
@@ -862,7 +866,7 @@
     "            via_color._50,   # Middle at 50%\n",
     "            to_color.red._500,\n",
     "            to_color._90,    # End at 90%\n",
-    "            \"p-8\"\n",
+    "            p(8)\n",
     "        )\n",
     "    )\n",
     "    assert \"from-10%\" in gradient_positions.attrs['class']\n",
@@ -1131,12 +1135,16 @@
     "def test_backgrounds_practical_examples():\n",
     "    \"\"\"Test background utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, H1, P, Section\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position\n",
     "    \n",
     "    # Card with colored background\n",
     "    card = Div(\n",
-    "        H1(\"Welcome\", cls=\"text-white\"),\n",
+    "        H1(\"Welcome\", cls=str(text.white)),\n",
     "        P(\"This is a card with a blue background\"),\n",
-    "        cls=combine_classes(bg.blue._500, \"p-6 rounded-lg\")\n",
+    "        cls=combine_classes(bg.blue._500, p(6), rounded.lg)\n",
     "    )\n",
     "    assert \"bg-blue-500\" in card.attrs['class']\n",
     "    \n",
@@ -1144,13 +1152,13 @@
     "    hero = Section(\n",
     "        Div(\n",
     "            H1(\"Hero Title\"),\n",
-    "            cls=combine_classes(bg.black.opacity(50), \"p-8\")\n",
+    "            cls=combine_classes(bg.black.opacity(50), p(8))\n",
     "        ),\n",
     "        cls=combine_classes(\n",
     "            bg_size.cover,\n",
     "            bg_position.center,\n",
     "            bg_repeat.no_repeat,\n",
-    "            \"relative\"\n",
+    "            position.relative\n",
     "        )\n",
     "    )\n",
     "    assert str(bg.black.opacity(50)) == \"bg-black/50\"\n",
@@ -1162,7 +1170,7 @@
     "        \"Gradient Text\",\n",
     "        cls=combine_classes(\n",
     "            bg_clip.text,\n",
-    "            \"text-transparent\",\n",
+    "            text.transparent,\n",
     "            bg_linear.to_r,\n",
     "            from_color.blue._500,\n",
     "            to_color.purple._600\n",
