--- a/nbs/utilities/borders.ipynb
+++ b/nbs/utilities/borders.ipynb
@@ -1608,6 +1608,9 @@
     "def test_borders_practical_examples():\n",
     "    \"\"\"Test border utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Ul, Li, H3, P, Input, Link\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, overflow\n",
+    "    from cjm_fasthtml_tailwind.core.base import combine_classes\n",
     "    \n",
     "    # Card with rounded corners and colored border\n",
     "    card = Card(\n",
@@ -1617,7 +1620,7 @@
     "            rounded.lg,\n",
     "            border(),\n",
     "            border_color.gray._300,\n",
-    "            \"p-6\"\n",
+    "            p(6)\n",
     "        )\n",
     "    )\n",
     "    assert \"rounded-lg\" in card.attrs['class']\n",
@@ -1631,7 +1634,8 @@
     "            rounded.full,\n",
     "            border._2,\n",
     "            border_color.blue._500,\n",
-    "            \"px-4 py-2\"\n",
+    "            p.x(4),\n",
+    "            p.y(2)\n",
     "        )\n",
     "    )\n",
     "    assert \"rounded-full\" in button.attrs['class']\n",
@@ -1648,7 +1652,7 @@
     "            border_color.t.red._500,\n",
     "            border_color.x.gray._300,\n",
     "            border_color.b.transparent,\n",
-    "            \"p-4\"\n",
+    "            p(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"rounded-t-xl\" in container.attrs['class']\n",
@@ -1665,7 +1669,7 @@
     "        cls=combine_classes(\n",
     "            divide.y._2,\n",
     "            divide_color.gray._200,\n",
-    "            \"py-2\"\n",
+    "            p.y(2)\n",
     "        )\n",
     "    )\n",
     "    assert \"divide-y-2\" in list_with_dividers.attrs['class']\n",
@@ -1677,13 +1681,13 @@
     "        Button(\"Center\"),\n",
     "        Button(\"Right\"),\n",
     "        cls=combine_classes(\n",
-    "            \"flex\",\n",
+    "            display_tw.flex,\n",
     "            divide.x(),\n",
     "            divide_color.gray._400,\n",
     "            border(),\n",
     "            border_color.gray._400,\n",
     "            rounded.lg,\n",
-    "            \"overflow-hidden\"\n",
+    "            overflow.hidden\n",
     "        )\n",
     "    )\n",
     "    assert \"divide-x\" in button_group.attrs['class']\n",
@@ -1707,7 +1711,7 @@
     "            rounded.tr.sm,\n",
     "            rounded.br.none,\n",
     "            rounded.bl.md,\n",
-    "            \"p-4\"\n",
+    "            p(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"border-t-4\" in complex_border.attrs['class']\n",
@@ -1729,7 +1733,7 @@
     "            border._2,\n",
     "            border_color.black.opacity(20),\n",
     "            rounded.md,\n",
-    "            \"p-4\"\n",
+    "            p(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"border-2\" in transparent_card.attrs['class']\n",
@@ -1745,7 +1749,8 @@
     "            border_color.gray._400,\n",
     "            border_style.dashed,\n",
     "            rounded.md,\n",
-    "            \"px-3 py-2\"\n",
+    "            p.x(3),\n",
+    "            p.y(2)\n",
     "        )\n",
     "    )\n",
     "    assert \"border-2\" in input_field.attrs['class']\n",
@@ -1761,7 +1766,7 @@
     "            divide.y(),\n",
     "            divide_color.gray._300,\n",
     "            divide_style.dotted,\n",
-    "            \"py-1\"\n",
+    "            p.y(1)\n",
     "        )\n",
     "    )\n",
     "    assert \"divide-y\" in dotted_list.attrs['class']\n",
@@ -1772,11 +1777,12 @@
     "    focus_button = Button(\n",
     "        \"Focus Me\",\n",
     "        cls=combine_classes(\n",
-    "            \"px-4 py-2\",\n",
+    "            p.x(4),\n",
+    "            p.y(2),\n",
     "            outline_style.none,\n",
-    "            \"focus:\" + str(outline._2),\n",
-    "            \"focus:\" + str(outline_color.blue._500),\n",
-    "            \"focus:\" + str(outline_offset._2)\n",
+    "            outline._2.focus,\n",
+    "            outline_color.blue._500.focus,\n",
+    "            outline_offset._2.focus\n",
     "        )\n",
     "    )\n",
     "    assert \"outline-none\" in focus_button.attrs['class']\n",
@@ -1789,7 +1795,9 @@
     "        \"Custom Link\",\n",
     "        href=\"#\",\n",
     "        cls=combine_classes(\n",
-    "            \"inline-block px-3 py-1\",\n",
+    "            display_tw.inline_block,\n",
+    "            p.x(3),\n",
+    "            p.y(1),\n",
     "            outline(),\n",
     "            outline_color.purple._400,\n",
     "            outline_style.dashed,\n",
@@ -1810,7 +1818,7 @@
     "            border_color.indigo._600,\n",
     "            border_style.double,\n",
     "            rounded.lg,\n",
-    "            \"p-6\"\n",
+    "            p(6)\n",
     "        )\n",
     "    )\n",
     "    assert \"border-4\" in double_border_box.attrs['class']\n",
@@ -1823,9 +1831,9 @@
     "        tabindex=\"0\",\n",
     "        cls=combine_classes(\n",
     "            outline_hidden,\n",
-    "            \"focus:outline-2\",\n",
-    "            \"focus:outline-blue-500\",\n",
-    "            \"p-4\"\n",
+    "            outline._2.focus,\n",
+    "            outline_color.blue._500.focus,\n",
+    "            p(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"outline-hidden\" in accessible_container.attrs['class']\n",
