--- a/nbs/utilities/filters.ipynb
+++ b/nbs/utilities/filters.ipynb
@@ -881,15 +881,21 @@
     "def test_filters_practical_examples():\n",
     "    \"\"\"Test filter utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, P, H1, Section\n",
+    "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration\n",
+    "    from cjm_fasthtml_tailwind.utilities.interactivity import cursor, pointer_events\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, inset\n",
     "    \n",
     "    # Image with hover blur effect\n",
     "    image_hover = Img(\n",
     "        src=\"/image.jpg\",\n",
     "        alt=\"Hoverable image\",\n",
     "        cls=combine_classes(\n",
-    "            \"transition-all\",\n",
-    "            \"hover:\" + str(blur.sm),\n",
-    "            \"cursor-pointer\"\n",
+    "            transition.all,\n",
+    "            blur.sm.hover,\n",
+    "            cursor.pointer\n",
     "        )\n",
     "    )\n",
     "    assert \"hover:blur-sm\" in image_hover.attrs['class']\n",
@@ -900,8 +906,9 @@
     "        alt=\"Grayscale photo\",\n",
     "        cls=combine_classes(\n",
     "            grayscale.full,\n",
-    "            \"hover:\" + str(grayscale(0)),\n",
-    "            \"transition-all duration-300\"\n",
+    "            grayscale(0).hover,\n",
+    "            transition.all,\n",
+    "            duration(300)\n",
     "        )\n",
     "    )\n",
     "    assert \"grayscale\" in grayscale_img.attrs['class']\n",
@@ -914,7 +921,9 @@
     "        cls=combine_classes(\n",
     "            drop_shadow.lg,\n",
     "            drop_shadow_color.blue._500,\n",
-    "            \"p-6 bg-white rounded-lg\"\n",
+    "            p(6),\n",
+    "            bg.white,\n",
+    "            rounded.lg\n",
     "        )\n",
     "    )\n",
     "    assert \"drop-shadow-lg\" in card_shadow.attrs['class']\n",
@@ -926,7 +935,9 @@
     "        cls=combine_classes(\n",
     "            backdrop_blur.md,\n",
     "            backdrop_saturate(150),\n",
-    "            \"bg-white/30 p-8 rounded-xl\"\n",
+    "            bg.white.opacity(30),\n",
+    "            p(8),\n",
+    "            rounded.xl\n",
     "        )\n",
     "    )\n",
     "    assert \"backdrop-blur-md\" in frosted_glass.attrs['class']\n",
@@ -953,7 +964,9 @@
     "        cls=combine_classes(\n",
     "            invert.full,\n",
     "            hue_rotate(180),\n",
-    "            \"fixed inset-0 pointer-events-none\"\n",
+    "            position.fixed,\n",
+    "            inset(0),\n",
+    "            pointer_events.none\n",
     "        )\n",
     "    )\n",
     "    assert \"invert\" in dark_overlay.attrs['class']\n",
