--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -1551,33 +1551,39 @@
     "): # TODO: Add type hint\n",
     "    \"\"\"Test flexbox and grid utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Header, Nav, Main, Article, Aside, Footer, Img, Button, H1, H2, P\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import font, text, text_align\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import h, min_h\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    \n",
     "    # Flexbox centered navigation\n",
     "    nav = Nav(\n",
-    "        Div(\"Logo\", cls=\"font-bold\"),\n",
+    "        Div(\"Logo\", cls=str(font.bold)),\n",
     "        Div(\n",
     "            \"Home\", \"About\", \"Contact\",\n",
-    "            cls=combine_classes(\"flex\", gap(4))\n",
+    "            cls=combine_classes(display_tw.flex, gap(4))\n",
     "        ),\n",
     "        Button(\"Sign In\"),\n",
     "        cls=combine_classes(\n",
-    "            \"flex\", \n",
+    "            display_tw.flex, \n",
     "            justify.between, \n",
     "            items.center, \n",
-    "            \"px-6\", \n",
-    "            \"py-4\"\n",
+    "            p.x(6), \n",
+    "            p.y(4)\n",
     "        )\n",
     "    )\n",
     "    assert nav.attrs['class'] == \"flex justify-between items-center px-6 py-4\"\n",
     "    \n",
     "    # Grid layout for cards\n",
     "    card_grid = Div(\n",
-    "        *[Div(f\"Card {i}\", cls=\"p-4 bg-gray-100 rounded\") for i in range(6)],\n",
+    "        *[Div(f\"Card {i}\", cls=combine_classes(p(4), bg.gray._100, rounded.full)) for i in range(6)],\n",
     "        cls=combine_classes(\n",
-    "            \"grid\",\n",
+    "            display_tw.grid,\n",
     "            grid_cols(1),     # 1 column on mobile\n",
-    "            \"md:grid-cols-2\", # 2 columns on medium screens\n",
-    "            \"lg:grid-cols-3\", # 3 columns on large screens\n",
+    "            grid_cols(2).md, # 2 columns on medium screens\n",
+    "            grid_cols(3).lg, # 3 columns on large screens\n",
     "            gap(4)\n",
     "        )\n",
     "    )\n",
@@ -1585,16 +1591,16 @@
     "    \n",
     "    # Flexbox vertical centering\n",
     "    hero = Div(\n",
-    "        H1(\"Welcome\", cls=\"text-4xl font-bold\"),\n",
+    "        H1(\"Welcome\", cls=combine_classes(text._4xl, font.bold)),\n",
     "        P(\"Build amazing things\"),\n",
-    "        Button(\"Get Started\", cls=\"mt-4\"),\n",
+    "        Button(\"Get Started\", cls=str(m.t(4))),\n",
     "        cls=combine_classes(\n",
-    "            \"flex\",\n",
+    "            display_tw.flex,\n",
     "            flex_direction.col,\n",
     "            justify.center,\n",
     "            items.center,\n",
-    "            \"min-h-screen\",\n",
-    "            \"text-center\"\n",
+    "            min_h.screen,\n",
+    "            text_align.center\n",
     "        )\n",
     "    )\n",
     "    assert hero.attrs['class'] == \"flex flex-col justify-center items-center min-h-screen text-center\"\n",
@@ -1602,37 +1608,37 @@
     "    # Complex grid layout with spanning\n",
     "    dashboard = Div(\n",
     "        # Header spans full width\n",
-    "        Header(\"Dashboard\", cls=combine_classes(col_span.full, \"p-4 bg-blue-500 text-white\")),\n",
+    "        Header(\"Dashboard\", cls=combine_classes(col_span.full, p(4), bg.blue._500, text.white)),\n",
     "        \n",
     "        # Sidebar\n",
-    "        Aside(\"Sidebar\", cls=combine_classes(row_span(2), \"p-4 bg-gray-200\")),\n",
+    "        Aside(\"Sidebar\", cls=combine_classes(row_span(2), p(4), bg.gray._200)),\n",
     "        \n",
     "        # Main content\n",
-    "        Main(\"Main Content\", cls=combine_classes(col_span(2), \"p-4\")),\n",
+    "        Main(\"Main Content\", cls=combine_classes(col_span(2), p(4))),\n",
     "        \n",
     "        # Stats cards\n",
-    "        Div(\"Stat 1\", cls=\"p-4 bg-green-100\"),\n",
-    "        Div(\"Stat 2\", cls=\"p-4 bg-yellow-100\"),\n",
+    "        Div(\"Stat 1\", cls=combine_classes(p(4), bg.green._100)),\n",
+    "        Div(\"Stat 2\", cls=combine_classes(p(4), bg.yellow._100)),\n",
     "        \n",
     "        cls=combine_classes(\n",
-    "            \"grid\",\n",
+    "            display_tw.grid,\n",
     "            grid_cols(3),\n",
     "            grid_rows(3),\n",
     "            gap(4),\n",
-    "            \"h-screen\"\n",
+    "            h.screen\n",
     "        )\n",
     "    )\n",
     "    assert dashboard.attrs['class'] == \"grid grid-cols-3 grid-rows-3 gap-4 h-screen\"\n",
     "    \n",
     "    # Flexbox with growing/shrinking items\n",
     "    toolbar = Div(\n",
-    "        Button(\"Back\", cls=shrink(0)),  # Don't shrink\n",
-    "        Div(\"Search...\", cls=combine_classes(grow(), \"px-4 bg-gray-100 rounded\")),  # Take available space\n",
-    "        Button(\"Settings\", cls=shrink(0)),  # Don't shrink\n",
-    "        cls=combine_classes(\"flex\", gap(2), items.center, \"p-2\")\n",
+    "        Button(\"Back\", cls=str(shrink(0))),  # Don't shrink\n",
+    "        Div(\"Search...\", cls=combine_classes(grow(), p.x(4), bg.gray._100, rounded.full)),  # Take available space\n",
+    "        Button(\"Settings\", cls=str(shrink(0))),  # Don't shrink\n",
+    "        cls=combine_classes(display_tw.flex, gap(2), items.center, p(2))\n",
     "    )\n",
     "    assert toolbar.attrs['class'] == \"flex gap-2 items-center p-2\"\n",
-    "    assert toolbar.children[1].attrs['class'] == \"grow-1 px-4 bg-gray-100 rounded\"\n",
+    "    assert toolbar.children[1].attrs['class'] == \"grow-1 px-4 bg-gray-100 rounded-full\"\n",
     "\n",
     "# Run the tests\n",
     "test_flexbox_and_grid_practical_examples()"
