--- a/nbs/utilities/interactivity.ipynb
+++ b/nbs/utilities/interactivity.ipynb
@@ -1086,9 +1086,14 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_interactivity_form_examples():\n",
+    "def test_interactivity_form_practical_examples():\n",
     "    \"\"\"Test interactivity utilities in form components.\"\"\"\n",
     "    from fasthtml.common import Input, Textarea, Button, Div, Label\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import border, rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
     "    \n",
     "    # Custom styled checkbox with accent color\n",
     "    checkbox = Input(\n",
@@ -1096,7 +1101,8 @@
     "        cls=combine_classes(\n",
     "            accent.blue._500,\n",
     "            cursor.pointer,\n",
-    "            \"w-4 h-4\"\n",
+    "            w(4),\n",
+    "            h(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"accent-blue-500\" in checkbox.attrs['class']\n",
@@ -1109,7 +1115,10 @@
     "        cls=combine_classes(\n",
     "            caret.red._500,\n",
     "            appearance.none,\n",
-    "            \"px-4 py-2 border rounded\"\n",
+    "            p.x(4),\n",
+    "            p.y(2),\n",
+    "            border(),\n",
+    "            rounded.full\n",
     "        )\n",
     "    )\n",
     "    assert \"caret-red-500\" in text_input.attrs['class']\n",
@@ -1121,7 +1130,9 @@
     "        cls=combine_classes(\n",
     "            resize.y,\n",
     "            field_sizing.content,\n",
-    "            \"p-3 border rounded\"\n",
+    "            p(3),\n",
+    "            border(),\n",
+    "            rounded.full\n",
     "        )\n",
     "    )\n",
     "    assert \"resize-y\" in textarea.attrs['class']\n",
@@ -1134,14 +1145,19 @@
     "            cursor.pointer,\n",
     "            select.none,\n",
     "            pointer_events.auto,\n",
-    "            \"bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600\"\n",
+    "            bg.blue._500,\n",
+    "            text.white,\n",
+    "            p.x(4),\n",
+    "            p.y(2),\n",
+    "            rounded.full,\n",
+    "            bg.blue._600.hover\n",
     "        )\n",
     "    )\n",
     "    assert \"cursor-pointer\" in button.attrs['class']\n",
     "    assert \"select-none\" in button.attrs['class']\n",
     "\n",
     "# Run the tests\n",
-    "test_interactivity_form_examples()"
+    "test_interactivity_form_practical_examples()"
    ]
   },
   {
@@ -1152,9 +1168,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_interactivity_scroll_snap_examples():\n",
+    "def test_interactivity_scroll_snap_practical_examples():\n",
     "    \"\"\"Test scroll snap utilities in carousel/gallery components.\"\"\"\n",
     "    from fasthtml.common import Div, Img\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, overflow\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import gap, shrink\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    \n",
     "    # Horizontal scroll snap container\n",
     "    carousel_container = Div(\n",
@@ -1163,7 +1182,9 @@
     "            snap.mandatory,\n",
     "            scroll.smooth,\n",
     "            scroll_p.x(4),\n",
-    "            \"flex overflow-x-auto gap-4\"\n",
+    "            display_tw.flex,\n",
+    "            overflow.x.auto,\n",
+    "            gap(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"snap-x\" in carousel_container.attrs['class']\n",
@@ -1177,7 +1198,8 @@
     "        cls=combine_classes(\n",
     "            snap_align.center,\n",
     "            snap_stop.always,\n",
-    "            \"flex-shrink-0 w-80\"\n",
+    "            shrink._0,\n",
+    "            w(80)\n",
     "        )\n",
     "    )\n",
     "    assert \"snap-center\" in snap_item.attrs['class']\n",
@@ -1189,7 +1211,8 @@
     "            snap.y,\n",
     "            snap.proximity,\n",
     "            scroll_m.y(2),\n",
-    "            \"h-screen overflow-y-auto\"\n",
+    "            h.screen,\n",
+    "            overflow.y.auto\n",
     "        )\n",
     "    )\n",
     "    assert \"snap-y\" in vertical_snap.attrs['class']\n",
@@ -1197,7 +1220,7 @@
     "    assert \"scroll-my-2\" in vertical_snap.attrs['class']\n",
     "\n",
     "# Run the tests\n",
-    "test_interactivity_scroll_snap_examples()"
+    "test_interactivity_scroll_snap_practical_examples()"
    ]
   },
   {
@@ -1208,9 +1231,15 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_interactivity_touch_mobile_examples():\n",
+    "def test_interactivity_touch_mobile_practical_examples():\n",
     "    \"\"\"Test touch and mobile interaction utilities.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Code\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow, display_tw\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
     "    \n",
     "    # Touch-enabled image viewer\n",
     "    image_viewer = Div(\n",
@@ -1219,7 +1248,8 @@
     "            touch.pinch_zoom,\n",
     "            cursor.zoom_in,\n",
     "            select.none,\n",
-    "            \"relative overflow-hidden\"\n",
+    "            position.relative,\n",
+    "            overflow.hidden\n",
     "        )\n",
     "    )\n",
     "    assert \"touch-pinch-zoom\" in image_viewer.attrs['class']\n",
@@ -1230,10 +1260,12 @@
     "        \"Drag me\",\n",
     "        cls=combine_classes(\n",
     "            cursor.grab,\n",
-    "            \"active:\" + str(cursor.grabbing),\n",
+    "            cursor.grabbing.active,\n",
     "            touch.none,\n",
     "            select.none,\n",
-    "            \"p-4 bg-gray-200 rounded\"\n",
+    "            p(4),\n",
+    "            bg.gray._200,\n",
+    "            rounded.full\n",
     "        )\n",
     "    )\n",
     "    assert \"cursor-grab\" in draggable.attrs['class']\n",
@@ -1245,7 +1277,11 @@
     "        cls=combine_classes(\n",
     "            select.all,\n",
     "            cursor.text,\n",
-    "            \"block p-3 bg-gray-900 text-gray-100 rounded\"\n",
+    "            display_tw.block,\n",
+    "            p(3),\n",
+    "            bg.gray._900,\n",
+    "            text.gray._100,\n",
+    "            rounded.full\n",
     "        )\n",
     "    )\n",
     "    assert \"select-all\" in code_block.attrs['class']\n",
@@ -1256,14 +1292,14 @@
     "        cls=combine_classes(\n",
     "            touch.pan_x,\n",
     "            will_change.transform,\n",
-    "            \"transition-transform\"\n",
+    "            transition.transform\n",
     "        )\n",
     "    )\n",
     "    assert \"touch-pan-x\" in swipe_area.attrs['class']\n",
     "    assert \"will-change-transform\" in swipe_area.attrs['class']\n",
     "\n",
     "# Run the tests\n",
-    "test_interactivity_touch_mobile_examples()"
+    "test_interactivity_touch_mobile_practical_examples()"
    ]
   },
   {
@@ -1348,9 +1384,16 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_interactivity_advanced_examples():\n",
+    "def test_interactivity_advanced_practical_examples():\n",
     "    \"\"\"Test advanced combinations of interactivity utilities.\"\"\"\n",
     "    from fasthtml.common import Div, Input, Form, Pre\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text, font\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, overflow\n",
+    "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, transform\n",
+    "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration\n",
     "    \n",
     "    # Dark mode form with custom styling\n",
     "    dark_form = Form(\n",
@@ -1360,7 +1403,7 @@
     "                accent.purple._500,\n",
     "                scheme.dark,\n",
     "                cursor.pointer,\n",
-    "                \"mr-2\"\n",
+    "                m.r(2)\n",
     "            )\n",
     "        ),\n",
     "        Input(\n",
@@ -1369,12 +1412,18 @@
     "                caret.purple._400,\n",
     "                appearance.none,\n",
     "                scheme.dark,\n",
-    "                \"bg-gray-800 text-white px-3 py-2 rounded\"\n",
+    "                bg.gray._800,\n",
+    "                text.white,\n",
+    "                p.x(3),\n",
+    "                p.y(2),\n",
+    "                rounded.full\n",
     "            )\n",
     "        ),\n",
     "        cls=combine_classes(\n",
     "            scheme.dark,\n",
-    "            \"p-6 bg-gray-900 rounded-lg\"\n",
+    "            p(6),\n",
+    "            bg.gray._900,\n",
+    "            rounded.lg\n",
     "        )\n",
     "    )\n",
     "    assert \"scheme-dark\" in dark_form.attrs['class']\n",
@@ -1392,12 +1441,17 @@
     "                resize.both,\n",
     "                scroll.auto,\n",
     "                scroll_p(4),\n",
-    "                \"font-mono bg-gray-900 text-gray-100 p-4 rounded overflow-auto\"\n",
+    "                font.mono,\n",
+    "                bg.gray._900,\n",
+    "                text.gray._100,\n",
+    "                p(4),\n",
+    "                rounded.full,\n",
+    "                overflow.auto\n",
     "            )\n",
     "        ),\n",
     "        cls=combine_classes(\n",
     "            pointer_events.auto,\n",
-    "            \"relative\"\n",
+    "            position.relative\n",
     "        )\n",
     "    )\n",
     "    assert \"select-text\" in code_editor.children[0].attrs['class']\n",
@@ -1412,7 +1466,9 @@
     "            will_change(\"transform, opacity\"),\n",
     "            touch.manipulation,\n",
     "            select.none,\n",
-    "            \"transform transition-all duration-300 hover:scale-105\"\n",
+    "            transition.all,\n",
+    "            duration._300,\n",
+    "            scale_tw(105).hover\n",
     "        )\n",
     "    )\n",
     "    assert \"cursor-pointer\" in animated_card.attrs['class']\n",
@@ -1420,21 +1476,13 @@
     "    assert \"touch-manipulation\" in animated_card.attrs['class']\n",
     "\n",
     "# Run the tests\n",
-    "test_interactivity_advanced_examples()"
+    "test_interactivity_advanced_practical_examples()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fbc657ff-f0e6-4ac8-88fc-d6e1142a126a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd7630e2-30a2-451f-be0a-3b710b140734",
    "metadata": {},
    "outputs": [],
    "source": []
