--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -1219,41 +1219,46 @@
     "):\n",
     "    \"\"\"Test layout utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Header, Nav, Main, Section, Article, Aside\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import h, w\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify, gap\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    \n",
     "    # Fixed header with z-index\n",
     "    header = Header(\n",
     "        Nav(\"Navigation\"),\n",
-    "        cls=combine_classes(position.fixed, top(0), left(0), right(0), z(50), \"bg-white\")\n",
+    "        cls=combine_classes(position.fixed, top(0), left(0), right(0), z(50), bg.white)\n",
     "    )\n",
     "    assert header.attrs['class'] == \"fixed top-0 left-0 right-0 z-50 bg-white\"\n",
     "    \n",
     "    # Sticky sidebar with scroll\n",
     "    sidebar = Aside(\n",
     "        \"Sidebar content\",\n",
-    "        cls=combine_classes(position.sticky, top(20), \"h-screen\", overflow.y.auto)\n",
+    "        cls=combine_classes(position.sticky, top(20), h.screen, overflow.y.auto)\n",
     "    )\n",
     "    assert sidebar.attrs['class'] == \"sticky top-20 h-screen overflow-y-auto\"\n",
     "    \n",
     "    # Modal overlay with z-index\n",
     "    modal_overlay = Div(\n",
     "        Div(\"Modal content\", cls=combine_classes(position.relative, z(10))),\n",
-    "        cls=combine_classes(position.fixed, inset(0), z(40), display_tw.flex, \"items-center\", \"justify-center\", \"bg-black/50\")\n",
+    "        cls=combine_classes(position.fixed, inset(0), z(40), display_tw.flex, items.center, justify.center, bg.black.opacity(50))\n",
     "    )\n",
     "    assert modal_overlay.attrs['class'] == \"fixed inset-0 z-40 flex items-center justify-center bg-black/50\"\n",
     "    assert modal_overlay.children[0].attrs['class'] == \"relative z-10\"\n",
     "    \n",
     "    # Image with aspect ratio and object fit\n",
     "    image_container = Div(\n",
-    "        Img(src=\"image.jpg\", cls=combine_classes(object_fit.cover, object_position.center, \"w-full\", \"h-full\")),\n",
-    "        cls=combine_classes(aspect.video, overflow.hidden, \"rounded-lg\")\n",
+    "        Img(src=\"image.jpg\", cls=combine_classes(object_fit.cover, object_position.center, w.full, h.full)),\n",
+    "        cls=combine_classes(aspect.video, overflow.hidden, rounded.lg)\n",
     "    )\n",
     "    assert image_container.attrs['class'] == \"aspect-video overflow-hidden rounded-lg\"\n",
     "    assert image_container.children[0].attrs['class'] == \"object-cover object-center w-full h-full\"\n",
     "    \n",
     "    # Multi-column layout\n",
+    "    # Note: 'prose' is from Tailwind Typography plugin and doesn't have a factory yet\n",
     "    article = Article(\n",
     "        \"Lorem ipsum dolor sit amet...\",\n",
-    "        cls=combine_classes(columns(2), \"gap-8\", \"prose\")\n",
+    "        cls=combine_classes(columns(2), gap(8), \"prose\")\n",
     "    )\n",
     "    assert article.attrs['class'] == \"columns-2 gap-8 prose\"\n",
     "\n",
