--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -448,6 +448,7 @@
     "):\n",
     "    \"\"\"Test spacing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, P, Button, H2\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import max_w\n",
     "    \n",
     "    # Card component with padding\n",
     "    card = Div(\n",
@@ -474,7 +475,7 @@
     "    # Centered container with auto margins\n",
     "    centered_container = Div(\n",
     "        \"Centered content\",\n",
-    "        cls=combine_classes(m.x.auto, p(8), \"max-w-4xl\")\n",
+    "        cls=combine_classes(m.x.auto, p(8), max_w._4xl)\n",
     "    )\n",
     "    \n",
     "    assert centered_container.attrs['class'] == \"mx-auto p-8 max-w-4xl\"\n",
