--- a/nbs/utilities/svg.ipynb
+++ b/nbs/utilities/svg.ipynb
@@ -485,7 +485,7 @@
     "def test_svg_stroke_width_arbitrary_examples():\n",
     "    \"\"\"Test stroke width utilities with arbitrary and custom values.\"\"\"\n",
     "    # Arbitrary numeric values\n",
-    "    assert str(stroke_width(\"0.25\")) == \"stroke-0.25\"\n",
+    "    assert str(stroke_width(\"0.25\")) == \"stroke-[0.25]\"\n",
     "    assert str(stroke_width(\"10px\")) == \"stroke-[10px]\"\n",
     "    assert str(stroke_width(\"2rem\")) == \"stroke-[2rem]\"\n",
     "    \n",
@@ -518,6 +518,7 @@
     "def test_svg_practical_examples():\n",
     "    \"\"\"Test SVG utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.svg import Svg, Circle, Rect, G, Path\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
     "    \n",
     "    # Icon with fill color\n",
     "    icon = Svg(\n",
@@ -526,7 +527,7 @@
     "            cls=str(fill.current)\n",
     "        ),\n",
     "        viewBox=\"0 0 24 24\",\n",
-    "        cls=combine_classes(\"w-6 h-6\", fill_none)\n",
+    "        cls=combine_classes(w(6), h(6), fill_none)\n",
     "    )\n",
     "    assert \"fill-current\" in icon.children[0].attrs['class']\n",
     "    assert \"fill-none\" in icon.attrs['class']\n",
@@ -542,7 +543,7 @@
     "            )\n",
     "        ),\n",
     "        viewBox=\"0 0 100 100\",\n",
-    "        cls=\"w-24 h-24\"\n",
+    "        cls=combine_classes(w(24), h(24))\n",
     "    )\n",
     "    circle_attrs = circle_svg.children[0].attrs['class']\n",
     "    assert \"fill-transparent\" in circle_attrs\n",
@@ -570,7 +571,7 @@
     "            )\n",
     "        ),\n",
     "        viewBox=\"0 0 100 100\",\n",
-    "        cls=\"w-32 h-32\"\n",
+    "        cls=combine_classes(w(32), h(32))\n",
     "    )\n",
     "    rect_attrs = complex_svg.children[0].children[0].attrs['class']\n",
     "    circle_attrs = complex_svg.children[0].children[1].attrs['class']\n",
@@ -607,15 +608,18 @@
     "    \"\"\"Test creating reusable SVG icon components.\"\"\"\n",
     "    from fasthtml.common import Div\n",
     "    from fasthtml.svg import Svg, Path\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import items, justify\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw\n",
     "    \n",
     "    # Helper function to create an icon\n",
-    "    def Icon(path_d: str, size: str = \"6\", color_cls: str = \"\"):\n",
+    "    def Icon(path_d: str, size: int = 6, color_cls: str = \"\"):\n",
     "        \"\"\"Create a reusable icon component.\"\"\"\n",
     "        return Svg(\n",
     "            Path(d=path_d, cls=str(fill.current)),\n",
     "            viewBox=\"0 0 24 24\",\n",
     "            cls=combine_classes(\n",
-    "                f\"w-{size} h-{size}\",\n",
+    "                w(size), h(size),\n",
     "                fill_none,\n",
     "                stroke.current,\n",
     "                stroke_width(2),\n",
@@ -626,7 +630,7 @@
     "    # Home icon\n",
     "    home_icon = Icon(\n",
     "        \"M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6\",\n",
-    "        size=\"8\",\n",
+    "        size=8,\n",
     "        color_cls=\"text-blue-500\"\n",
     "    )\n",
     "    assert \"w-8 h-8\" in home_icon.attrs['class']\n",
@@ -647,9 +651,9 @@
     "                )\n",
     "            ),\n",
     "            viewBox=\"0 0 24 24\",\n",
-    "            cls=\"w-5 h-5\"\n",
+    "            cls=combine_classes(w(5), h(5))\n",
     "        ),\n",
-    "        cls=\"inline-flex items-center justify-center\"\n",
+    "        cls=combine_classes(display_tw.inline_flex, items.center, justify.center)\n",
     "    )\n",
     "    path_attrs = check_icon.children[0].children[0].attrs['class']\n",
     "    assert \"fill-none\" in path_attrs\n",
@@ -682,6 +686,8 @@
     "    \"\"\"Test creating a progress ring component.\"\"\"\n",
     "    from fasthtml.common import Div\n",
     "    from fasthtml.svg import Svg, Circle\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position\n",
     "    \n",
     "    # Progress ring component\n",
     "    def ProgressRing(percentage: int, size: int = 120):\n",
@@ -716,9 +722,9 @@
     "                    style=f\"stroke-dasharray: {circumference}; stroke-dashoffset: {stroke_dashoffset}; transform: rotate(-90deg); transform-origin: center;\",\n",
     "                ),\n",
     "                viewBox=f\"0 0 {size} {size}\",\n",
-    "                cls=\"w-32 h-32\"\n",
+    "                cls=combine_classes(w(32), h(32))\n",
     "            ),\n",
-    "            cls=\"relative inline-flex\"\n",
+    "            cls=combine_classes(position.relative, display_tw.inline_flex)\n",
     "        )\n",
     "    \n",
     "    # Test 75% progress\n",
@@ -869,14 +875,16 @@
    "source": [
     "#| export\n",
     "def svg_icon_classes(\n",
-    "    fill_color: Optional[str] = None,  # Fill color class or utility\n",
-    "    stroke_color: Optional[str] = None,  # Stroke color class or utility\n",
+    "    fill_color: Optional[Union[str, ColoredUtility]] = None,  # Fill color class or utility\n",
+    "    stroke_color: Optional[Union[str, ColoredUtility]] = None,  # Stroke color class or utility\n",
     "    width: Union[int, str] = 2,  # Stroke width value\n",
-    "    size: str = \"6\",  # Icon size (for w-{size} h-{size})\n",
+    "    size: int = 6,  # Icon size (numeric value for w and h)\n",
     "    extra_classes: str = \"\"  # Additional classes to include\n",
     ") -> str:  # Combined class string for SVG icon\n",
     "    \"\"\"Generate common SVG icon classes.\"\"\"\n",
-    "    classes = [f\"w-{size} h-{size}\"]\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    \n",
+    "    classes = [str(w(size)), str(h(size))]\n",
     "    \n",
     "    if fill_color:\n",
     "        classes.append(str(fill_color) if hasattr(fill_color, '__str__') else fill_color)\n",
@@ -917,7 +925,7 @@
     "        fill_color=fill_none,\n",
     "        stroke_color=stroke.green._500,\n",
     "        width=1,\n",
-    "        size=\"8\"\n",
+    "        size=8\n",
     "    )\n",
     "    assert result == \"w-8 h-8 fill-none stroke-green-500 stroke-1\"\n",
     "    \n",
