--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -1235,14 +1235,18 @@
     "def test_transforms_practical_examples():\n",
     "    \"\"\"Test transform utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Img, A\n",
+    "    from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, duration, animate\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, left\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import h, w\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    \n",
     "    # Hover effect with scale and rotate\n",
     "    hover_button = Button(\n",
     "        \"Hover Me\",\n",
     "        cls=combine_classes(\n",
-    "            \"hover:scale-110\", \n",
-    "            \"hover:rotate-3\",\n",
-    "            \"transition-transform\"\n",
+    "            scale_tw(110).hover, \n",
+    "            rotate(3).hover,\n",
+    "            transition.transform\n",
     "        )\n",
     "    )\n",
     "    assert hover_button.attrs['class'] == \"hover:scale-110 hover:rotate-3 transition-transform\"\n",
@@ -1250,9 +1254,9 @@
     "    # 3D card flip effect\n",
     "    flip_card = Div(\n",
     "        Div(\n",
-    "            Div(\"Front\", cls=\"backface-hidden\"),\n",
+    "            Div(\"Front\", cls=str(backface.hidden)),\n",
     "            Div(\"Back\", cls=combine_classes(backface.hidden, str(rotate.y(180)))),\n",
-    "            cls=combine_classes(transform_style._3d, \"transition-transform duration-700\", \"hover:rotate-y-180\")\n",
+    "            cls=combine_classes(transform_style._3d, transition.transform, duration(700), rotate.y(180).hover)\n",
     "        ),\n",
     "        cls=combine_classes(perspective.normal)\n",
     "    )\n",
@@ -1262,7 +1266,9 @@
     "        Div(\n",
     "            \"Modal Content\",\n",
     "            cls=combine_classes(\n",
-    "                \"fixed top-1/2 left-1/2\",\n",
+    "                position.fixed,\n",
+    "                top(\"1/2\"),\n",
+    "                left(\"1/2\"),\n",
     "                str(translate.x.negative(\"1/2\")),\n",
     "                str(translate.y.negative(\"1/2\"))\n",
     "            )\n",
@@ -1274,7 +1280,8 @@
     "        cls=combine_classes(\n",
     "            str(skew.y.negative(3)),\n",
     "            origin.left,\n",
-    "            \"h-24 bg-gray-100\"\n",
+    "            h(24),\n",
+    "            bg.gray._100\n",
     "        )\n",
     "    )\n",
     "    \n",
@@ -1292,7 +1299,9 @@
     "    cube_face = lambda side: Div(\n",
     "        side,\n",
     "        cls=combine_classes(\n",
-    "            \"absolute w-full h-full\",\n",
+    "            position.absolute,\n",
+    "            w.full,\n",
+    "            h.full,\n",
     "            backface.hidden if side != \"Front\" else \"\"\n",
     "        )\n",
     "    )\n",
@@ -1306,7 +1315,7 @@
     "        cube_face(\"Right\"),\n",
     "        cls=combine_classes(\n",
     "            transform_style._3d,\n",
-    "            \"animate-spin-3d\"\n",
+    "            animate(\"spin-3d\")\n",
     "        )\n",
     "    )\n",
     "\n",
