--- a/nbs/utilities/transitions_and_animation.ipynb
+++ b/nbs/utilities/transitions_and_animation.ipynb
@@ -771,12 +771,20 @@
     "def test_transitions_and_animation_practical_examples():\n",
     "    \"\"\"Test transition and animation utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Button, Card, Span, A, Img\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
+    "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, translate\n",
+    "    from cjm_fasthtml_tailwind.utilities.effects import opacity\n",
+    "    from cjm_fasthtml_tailwind.utilities.transforms import transform\n",
     "    \n",
     "    # Button with hover transition\n",
     "    button = Button(\n",
     "        \"Hover me\",\n",
     "        cls=combine_classes(\n",
-    "            \"bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded\",\n",
+    "            bg.blue._500, bg.blue._700.hover, text.white, p.x(4), p.y(2), rounded.full,\n",
     "            transition.colors,\n",
     "            duration._300,\n",
     "            ease.in_out\n",
@@ -790,7 +798,7 @@
     "    card = Card(\n",
     "        \"Content\",\n",
     "        cls=combine_classes(\n",
-    "            \"shadow-md hover:shadow-xl\",\n",
+    "            shadow.md, shadow.xl.hover,\n",
     "            transition.shadow,\n",
     "            duration._200\n",
     "        )\n",
@@ -802,7 +810,7 @@
     "    scale_div = Div(\n",
     "        \"Scale on hover\",\n",
     "        cls=combine_classes(\n",
-    "            \"hover:scale-110\",\n",
+    "            scale_tw(110).hover,\n",
     "            transition.transform,\n",
     "            duration._150,\n",
     "            ease.out\n",
@@ -816,7 +824,7 @@
     "    delayed_link = A(\n",
     "        \"Delayed hover\",\n",
     "        cls=combine_classes(\n",
-    "            \"text-gray-600 hover:text-blue-500\",\n",
+    "            text.gray._600, text.blue._500.hover,\n",
     "            transition.colors,\n",
     "            duration._500,\n",
     "            delay._200\n",
@@ -828,7 +836,7 @@
     "    multi_transition = Div(\n",
     "        \"Multiple transitions\",\n",
     "        cls=combine_classes(\n",
-    "            \"opacity-50 hover:opacity-100 transform hover:translate-y-1\",\n",
+    "            opacity._50, opacity._100.hover, transform.gpu, translate.y(1).hover,\n",
     "            transition(\"opacity, transform\"),\n",
     "            duration._300\n",
     "        )\n",
@@ -847,14 +855,19 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_transitions_and_animation_practical_examples():\n",
+    "def test_transitions_and_animation_animation_examples():\n",
     "    \"\"\"Test animation utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Span, Button\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, h\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import position, top, right\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text\n",
     "    \n",
     "    # Loading spinner\n",
     "    spinner = Div(\n",
     "        cls=combine_classes(\n",
-    "            \"border-2 border-gray-200 border-t-blue-500 rounded-full w-6 h-6\",\n",
+    "            border._2, border_color.gray._200, border_color.t.blue._500, rounded.full, w(6), h(6),\n",
     "            animate.spin\n",
     "        )\n",
     "    )\n",
@@ -863,7 +876,7 @@
     "    # Ping notification\n",
     "    notification_dot = Span(\n",
     "        cls=combine_classes(\n",
-    "            \"absolute -top-1 -right-1 h-3 w-3 bg-red-500 rounded-full\",\n",
+    "            position.absolute, top.negative(1), right.negative(1), h(3), w(3), bg.red._500, rounded.full,\n",
     "            animate.ping\n",
     "        )\n",
     "    )\n",
@@ -872,7 +885,7 @@
     "    # Pulse skeleton loader\n",
     "    skeleton = Div(\n",
     "        cls=combine_classes(\n",
-    "            \"h-4 bg-gray-200 rounded\",\n",
+    "            h(4), bg.gray._200, rounded.full,\n",
     "            animate.pulse\n",
     "        )\n",
     "    )\n",
@@ -882,7 +895,7 @@
     "    arrow = Div(\n",
     "        \"↓\",\n",
     "        cls=combine_classes(\n",
-    "            \"text-2xl\",\n",
+    "            text._2xl,\n",
     "            animate.bounce\n",
     "        )\n",
     "    )\n",
@@ -907,7 +920,7 @@
     "    assert \"animate-(--custom-fade-in)\" in var_animated.attrs['class']\n",
     "\n",
     "# Run the tests\n",
-    "test_transitions_and_animation_practical_examples()"
+    "test_transitions_and_animation_animation_examples()"
    ]
   },
   {
@@ -921,15 +934,18 @@
     "def test_transitions_and_animation_composition_examples():\n",
     "    \"\"\"Test composing multiple transition utilities together.\"\"\"\n",
     "    from fasthtml.common import Div, Button\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg_linear, from_color, to_color\n",
+    "    from cjm_fasthtml_tailwind.utilities.transforms import scale_tw, translate, transform\n",
+    "    from cjm_fasthtml_tailwind.utilities.effects import shadow, opacity\n",
     "    \n",
     "    # Complete transition setup\n",
     "    interactive_element = Button(\n",
     "        \"Interactive\",\n",
     "        cls=combine_classes(\n",
-    "            \"bg-gradient-to-r from-blue-500 to-purple-600\",\n",
-    "            \"hover:from-blue-600 hover:to-purple-700\",\n",
-    "            \"transform hover:scale-105 active:scale-95\",\n",
-    "            \"shadow-lg hover:shadow-xl\",\n",
+    "            bg_linear.to_r, from_color.blue._500, to_color.purple._600,\n",
+    "            from_color.blue._600.hover, to_color.purple._700.hover,\n",
+    "            transform.gpu, scale_tw(105).hover, scale_tw(95).active,\n",
+    "            shadow.lg, shadow.xl.hover,\n",
     "            transition.all,  # Transition all properties\n",
     "            duration._300,\n",
     "            ease.in_out,\n",
@@ -945,8 +961,8 @@
     "    multi_property = Div(\n",
     "        \"Multi-property transitions\",\n",
     "        cls=combine_classes(\n",
-    "            \"opacity-75 hover:opacity-100\",\n",
-    "            \"transform hover:translate-x-2\",\n",
+    "            opacity._75, opacity._100.hover,\n",
+    "            transform.gpu, translate.x(2).hover,\n",
     "            transition(\"opacity, transform\"),\n",
     "            duration(\"200ms\"),  # Custom duration\n",
     "            ease(\"cubic-bezier(0.4, 0, 0.2, 1)\")  # Custom easing\n",
@@ -961,7 +977,7 @@
     "        \"Loading...\",\n",
     "        cls=combine_classes(\n",
     "            animate.pulse,\n",
-    "            \"hover:opacity-50\",\n",
+    "            opacity._50.hover,\n",
     "            transition.opacity,\n",
     "            duration._150\n",
     "        )\n",
@@ -1145,8 +1161,9 @@
     "def loading_spinner(\n",
     ") -> str:  # Combined CSS classes for a loading spinner\n",
     "    \"\"\"Create a loading spinner animation.\"\"\"\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
     "    return combine_classes(\n",
-    "        \"border-2 border-gray-200 border-t-current rounded-full\",\n",
+    "        border._2, border_color.gray._200, border_color.t.current, rounded.full,\n",
     "        animate.spin\n",
     "    )"
    ]
@@ -1162,8 +1179,9 @@
     "def skeleton_loader(\n",
     ") -> str:  # Combined CSS classes for a skeleton loader\n",
     "    \"\"\"Create a skeleton loader animation for content placeholders.\"\"\"\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
     "    return combine_classes(\n",
-    "        \"bg-gray-200\",\n",
+    "        bg.gray._200,\n",
     "        animate.pulse\n",
     "    )"
    ]
