--- a/nbs/utilities/typography.ipynb
+++ b/nbs/utilities/typography.ipynb
@@ -1886,6 +1886,10 @@
     "def test_typography_practical_examples():\n",
     "    \"\"\"Test typography utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import H1, H2, P, Div, Span, A, Ul, Li, Blockquote\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import max_w\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded, border, border_color\n",
     "    \n",
     "    # Heading with multiple typography utilities\n",
     "    heading = H1(\n",
@@ -1936,7 +1940,7 @@
     "    # Truncated text\n",
     "    truncated = Div(\n",
     "        \"This is a very long text that should be truncated with an ellipsis when it overflows the container width.\",\n",
-    "        cls=combine_classes(truncate, \"max-w-xs\")\n",
+    "        cls=combine_classes(truncate, max_w.xs)\n",
     "    )\n",
     "    assert \"truncate\" in truncated.attrs['class']\n",
     "    \n",
@@ -1955,7 +1959,9 @@
     "            text.sm,\n",
     "            text.gray._800,\n",
     "            whitespace.pre,\n",
-    "            \"bg-gray-100 p-4 rounded\"\n",
+    "            bg.gray._100,\n",
+    "            p(4),\n",
+    "            rounded()\n",
     "        )\n",
     "    )\n",
     "    assert \"font-mono\" in code.attrs['class']\n",
@@ -1991,7 +1997,9 @@
     "            italic,\n",
     "            text.gray._600,\n",
     "            indent(8),\n",
-    "            \"border-l-4 border-gray-300 pl-4\"\n",
+    "            border.l._4,\n",
+    "            border_color.gray._300,\n",
+    "            p.l(4)\n",
     "        )\n",
     "    )\n",
     "    assert \"text-lg\" in quote.attrs['class']\n",
