--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -155,11 +155,26 @@
     "        Format value according to Tailwind conventions with scale awareness:\n",
     "        - Values with spaces: wrapped in brackets (arbitrary)\n",
     "        - String numbers not in scale: wrapped in brackets\n",
+    "        - Decimal strings when decimals disabled: wrapped in brackets\n",
     "        - Otherwise: use standard formatting\n",
     "        \"\"\"\n",
     "        # First check if it's a string containing spaces\n",
     "        if isinstance(value, str) and ' ' in value:\n",
     "            return f\"[{value}]\"\n",
+    "        \n",
+    "        # Check if it's a string that looks like a decimal\n",
+    "        if isinstance(value, str) and '.' in value:\n",
+    "            try:\n",
+    "                float_val = float(value)\n",
+    "                # If decimals are disabled in config, treat decimal strings as arbitrary\n",
+    "                if not self.config.decimals:\n",
+    "                    return f\"[{value}]\"\n",
+    "                # If decimals are enabled, check if this specific decimal is in DECIMAL_SCALE\n",
+    "                elif float_val not in DECIMAL_SCALE:\n",
+    "                    return f\"[{value}]\"\n",
+    "            except ValueError:\n",
+    "                # Not a valid float, let parent handle it\n",
+    "                pass\n",
     "        \n",
     "        # Check if it's a string number that should be arbitrary\n",
     "        if isinstance(value, str) and value.isdigit():\n",
@@ -999,7 +1014,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '1/4', '3/12', '2/6', '4/12', '1/3', '2/5', '5/12', '2/4', '3/6', '1/2', '6/12', '7/12', '3/5', '8/12', '4/6', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
+      "['1/12', '1/6', '2/12', '1/5', '1/4', '3/12', '4/12', '2/6', '1/3', '2/5', '5/12', '3/6', '6/12', '2/4', '1/2', '7/12', '3/5', '4/6', '8/12', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
      ]
     }
    ],
