--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -645,6 +645,9 @@
     "):\n",
     "    \"\"\"Test sizing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Article, Header, Main, Aside\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import display_tw, position, object_fit\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import m, p\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import rounded\n",
     "    \n",
     "    # Card with constrained width\n",
     "    card = Div(\n",
@@ -662,7 +665,7 @@
     "    \n",
     "    # Responsive image container\n",
     "    image_container = Div(\n",
-    "        Img(src=\"image.jpg\", cls=combine_classes(w.full, h.full, \"object-cover\")),\n",
+    "        Img(src=\"image.jpg\", cls=combine_classes(w.full, h.full, object_fit.cover)),\n",
     "        cls=combine_classes(w(\"1/2\"), h(64), max_h(96))\n",
     "    )\n",
     "    assert image_container.attrs['class'] == \"w-1/2 h-64 max-h-96\"\n",
@@ -672,7 +675,7 @@
     "    layout = Div(\n",
     "        Aside(\"Sidebar\", cls=combine_classes(w(64), min_w(48), h.full)),\n",
     "        Main(\"Main content\", cls=combine_classes(w.full, min_h.screen)),\n",
-    "        cls=\"flex\"\n",
+    "        cls=str(display_tw.flex)\n",
     "    )\n",
     "    assert layout.children[0].attrs['class'] == \"w-64 min-w-48 h-full\"\n",
     "    assert layout.children[1].attrs['class'] == \"w-full min-h-screen\"\n",
@@ -681,21 +684,21 @@
     "    article = Article(\n",
     "        Header(\"Article Title\"),\n",
     "        Div(\"Article content...\"),\n",
-    "        cls=combine_classes(w.full, max_w._4xl, \"mx-auto\", min_h(\"50vh\"))\n",
+    "        cls=combine_classes(w.full, max_w._4xl, m.x.auto, min_h(\"50vh\"))\n",
     "    )\n",
     "    assert article.attrs['class'] == \"w-full max-w-4xl mx-auto min-h-[50vh]\"\n",
     "    \n",
     "    # Using the size utility for square elements\n",
     "    avatar = Div(\n",
-    "        Img(src=\"avatar.jpg\", cls=\"rounded-full\"),\n",
-    "        cls=combine_classes(size_util(16), \"relative\")\n",
+    "        Img(src=\"avatar.jpg\", cls=str(rounded.full)),\n",
+    "        cls=combine_classes(size_util(16), position.relative)\n",
     "    )\n",
     "    assert avatar.attrs['class'] == \"size-16 relative\"\n",
     "    \n",
     "    # Using container utility\n",
     "    page_container = Div(\n",
     "        \"Page content\",\n",
-    "        cls=combine_classes(container, \"mx-auto\", \"px-4\")\n",
+    "        cls=combine_classes(container, m.x.auto, p.x(4))\n",
     "    )\n",
     "    assert page_container.attrs['class'] == \"container mx-auto px-4\"\n",
     "\n",
