--- a/nbs/utilities/tables.ipynb
+++ b/nbs/utilities/tables.ipynb
@@ -419,6 +419,7 @@
     "def test_tables_practical_examples():\n",
     "    \"\"\"Test table utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w, min_w\n",
     "    \n",
     "    # Basic table with collapsed borders\n",
     "    basic_table = Table(\n",
@@ -443,7 +444,7 @@
     "        ),\n",
     "        cls=combine_classes(\n",
     "            border_collapse.collapse,\n",
-    "            \"w-full\"\n",
+    "            w.full\n",
     "        )\n",
     "    )\n",
     "    assert \"border-collapse\" in basic_table.attrs['class']\n",
@@ -457,7 +458,7 @@
     "        cls=combine_classes(\n",
     "            border_collapse.separate,\n",
     "            border_spacing(2),\n",
-    "            \"w-full\"\n",
+    "            w.full\n",
     "        )\n",
     "    )\n",
     "    assert \"border-separate\" in spaced_table.attrs['class']\n",
@@ -473,7 +474,7 @@
     "            border_collapse.separate,\n",
     "            border_spacing.x(4),\n",
     "            border_spacing.y(2),\n",
-    "            \"w-full\"\n",
+    "            w.full\n",
     "        )\n",
     "    )\n",
     "    assert \"border-spacing-x-4\" in custom_spaced_table.attrs['class']\n",
@@ -484,8 +485,8 @@
     "        Caption(\"User Information\", cls=str(caption_side.top)),\n",
     "        Thead(\n",
     "            Tr(\n",
-    "                Th(\"ID\", cls=\"w-20\"),\n",
-    "                Th(\"Name\", cls=\"w-40\"),\n",
+    "                Th(\"ID\", cls=str(w(20))),\n",
+    "                Th(\"Name\", cls=str(w(40))),\n",
     "                Th(\"Description\")\n",
     "            )\n",
     "        ),\n",
@@ -499,7 +500,7 @@
     "        cls=combine_classes(\n",
     "            table_layout.fixed,\n",
     "            border_collapse.collapse,\n",
-    "            \"w-full\"\n",
+    "            w.full\n",
     "        )\n",
     "    )\n",
     "    assert \"table-fixed\" in fixed_table.attrs['class']\n",
@@ -519,7 +520,7 @@
     "            table_layout.auto,\n",
     "            border_collapse.separate,\n",
     "            border_spacing.px,\n",
-    "            \"min-w-full\"\n",
+    "            min_w.full\n",
     "        )\n",
     "    )\n",
     "    assert \"table-auto\" in auto_table.attrs['class']\n",
@@ -559,6 +560,13 @@
     "def test_tables_complex_example():\n",
     "    \"\"\"Test a complex table example with various styling.\"\"\"\n",
     "    from fasthtml.common import Table, Thead, Tbody, Tr, Th, Td, Caption, Div\n",
+    "    from cjm_fasthtml_tailwind.utilities.sizing import w\n",
+    "    from cjm_fasthtml_tailwind.utilities.backgrounds import bg\n",
+    "    from cjm_fasthtml_tailwind.utilities.borders import border, border_color, rounded\n",
+    "    from cjm_fasthtml_tailwind.utilities.typography import text, text_align, font\n",
+    "    from cjm_fasthtml_tailwind.utilities.spacing import p, m\n",
+    "    from cjm_fasthtml_tailwind.utilities.layout import overflow\n",
+    "    from cjm_fasthtml_tailwind.utilities.effects import shadow\n",
     "    \n",
     "    # Create a styled data table\n",
     "    data_table = Div(\n",
@@ -567,56 +575,63 @@
     "                \"Quarterly Sales Report\",\n",
     "                cls=combine_classes(\n",
     "                    caption_side.top,\n",
-    "                    \"text-lg font-semibold text-gray-700 mb-2\"\n",
+    "                    text.lg,\n",
+    "                    font.semibold,\n",
+    "                    text.gray._700,\n",
+    "                    m.b(2)\n",
     "                )\n",
     "            ),\n",
     "            Thead(\n",
     "                Tr(\n",
-    "                    Th(\"Quarter\", cls=\"text-left p-4 bg-gray-100\"),\n",
-    "                    Th(\"Product\", cls=\"text-left p-4 bg-gray-100\"),\n",
-    "                    Th(\"Units Sold\", cls=\"text-right p-4 bg-gray-100\"),\n",
-    "                    Th(\"Revenue\", cls=\"text-right p-4 bg-gray-100\"),\n",
-    "                    cls=\"border-b-2 border-gray-300\"\n",
+    "                    Th(\"Quarter\", cls=combine_classes(text_align.left, p(4), bg.gray._100)),\n",
+    "                    Th(\"Product\", cls=combine_classes(text_align.left, p(4), bg.gray._100)),\n",
+    "                    Th(\"Units Sold\", cls=combine_classes(text_align.right, p(4), bg.gray._100)),\n",
+    "                    Th(\"Revenue\", cls=combine_classes(text_align.right, p(4), bg.gray._100)),\n",
+    "                    cls=combine_classes(border.b._2, border_color.gray._300)\n",
     "                )\n",
     "            ),\n",
     "            Tbody(\n",
     "                Tr(\n",
-    "                    Td(\"Q1 2024\", cls=\"p-4\"),\n",
-    "                    Td(\"Widget A\", cls=\"p-4\"),\n",
-    "                    Td(\"1,234\", cls=\"text-right p-4\"),\n",
-    "                    Td(\"$12,340\", cls=\"text-right p-4\"),\n",
-    "                    cls=\"border-b border-gray-200\"\n",
+    "                    Td(\"Q1 2024\", cls=str(p(4))),\n",
+    "                    Td(\"Widget A\", cls=str(p(4))),\n",
+    "                    Td(\"1,234\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    Td(\"$12,340\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    cls=combine_classes(border.b(), border_color.gray._200)\n",
     "                ),\n",
     "                Tr(\n",
-    "                    Td(\"Q1 2024\", cls=\"p-4\"),\n",
-    "                    Td(\"Widget B\", cls=\"p-4\"),\n",
-    "                    Td(\"567\", cls=\"text-right p-4\"),\n",
-    "                    Td(\"$8,505\", cls=\"text-right p-4\"),\n",
-    "                    cls=\"border-b border-gray-200\"\n",
+    "                    Td(\"Q1 2024\", cls=str(p(4))),\n",
+    "                    Td(\"Widget B\", cls=str(p(4))),\n",
+    "                    Td(\"567\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    Td(\"$8,505\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    cls=combine_classes(border.b(), border_color.gray._200)\n",
     "                ),\n",
     "                Tr(\n",
-    "                    Td(\"Q2 2024\", cls=\"p-4\"),\n",
-    "                    Td(\"Widget A\", cls=\"p-4\"),\n",
-    "                    Td(\"1,567\", cls=\"text-right p-4\"),\n",
-    "                    Td(\"$15,670\", cls=\"text-right p-4\"),\n",
-    "                    cls=\"border-b border-gray-200\"\n",
+    "                    Td(\"Q2 2024\", cls=str(p(4))),\n",
+    "                    Td(\"Widget A\", cls=str(p(4))),\n",
+    "                    Td(\"1,567\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    Td(\"$15,670\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    cls=combine_classes(border.b(), border_color.gray._200)\n",
     "                ),\n",
     "                Tr(\n",
-    "                    Td(\"Q2 2024\", cls=\"p-4\"),\n",
-    "                    Td(\"Widget B\", cls=\"p-4\"),\n",
-    "                    Td(\"890\", cls=\"text-right p-4\"),\n",
-    "                    Td(\"$13,350\", cls=\"text-right p-4\"),\n",
-    "                    cls=\"border-b border-gray-200\"\n",
+    "                    Td(\"Q2 2024\", cls=str(p(4))),\n",
+    "                    Td(\"Widget B\", cls=str(p(4))),\n",
+    "                    Td(\"890\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    Td(\"$13,350\", cls=combine_classes(text_align.right, p(4))),\n",
+    "                    cls=combine_classes(border.b(), border_color.gray._200)\n",
     "                )\n",
     "            ),\n",
     "            cls=combine_classes(\n",
     "                table_layout.fixed,\n",
     "                border_collapse.separate,\n",
     "                border_spacing(0),\n",
-    "                \"w-full bg-white shadow-sm rounded-lg overflow-hidden\"\n",
+    "                w.full,\n",
+    "                bg.white,\n",
+    "                shadow.sm,\n",
+    "                rounded.lg,\n",
+    "                overflow.hidden\n",
     "            )\n",
     "        ),\n",
-    "        cls=\"p-6\"\n",
+    "        cls=str(p(6))\n",
     "    )\n",
     "    \n",
     "    # Verify table utilities are applied\n",
@@ -638,7 +653,7 @@
     "            border_spacing.x(1),\n",
     "            border_spacing.y(0.5),\n",
     "            table_layout.auto,\n",
-    "            \"text-sm\"\n",
+    "            text.sm\n",
     "        )\n",
     "    )\n",
     "    \n",
